--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://balaks0702.github.io/joke-generator",
   "name": "joke-generator",
   "version": "0.1.0",
   "private": true,
